# avoid-your-past--rust-bevy

./: .gitignore  Cargo.toml  README.md  TODO.txt  ___Cargo.toml  check.sh  docs.sh  format.sh  index.html  package_web.sh  release.sh  release_desktop.sh  release_web.sh  run.sh  run_desktop.sh  run_web.sh  rust-toolchain.toml  setup.sh  update_rust_toolchain.sh
.github/actions/shared-steps-setup-prerequisites/: action.yml
.github/workflows/: build_test_lint.yml  rust.yml
pico8-version-to-rewrite-from/src/: main.lua
pico8-version-to-rewrite-from/src/game_states/: game_state_gameplay.lua  game_state_over.lua  game_state_splash.lua  game_state_start.lua
pico8-version-to-rewrite-from/src/gameplay/: animated_sprite.lua  item.lua  level.lua  memories.lua  memory.lua  mode.lua  particle.lua  player.lua  score.lua  trail.lua
pico8-version-to-rewrite-from/src/global/: assets.lua  audio.lua  collisions.lua  utils.lua
pico8-version-to-rewrite-from/src/gui/: sash.lua  topbar.lua
progress/: progress 2023-02-24 commit c19c5b57.mov  progress 2023-02-26 commit cb845454.mov
src/: constants.rs  main.rs  pico8_color.rs  pico8color.rs  print_fps.rs  z_layer.rs
src/debug_helpers/: mod.rs  print_fps.rs  sprites_boundaries.rs
src/game/: animation.rs  audio.rs  coin.rs  collision.rs  collision_debug.rs  game_area.rs  game_state.rs  mod.rs  player.rs  sprites.rs  sprites_debug.rs  trail.rs
src/game/gui/: mod.rs  topbar.rs
src/game/input/: gamepad_controls.rs  html_controls.rs  keyboard_controls.rs  mod.rs
src/game/logic/: collect_coins.rs  mod.rs
src/pixel_art_support/: fixed_fps.rs  fixed_timestep.rs  mod.rs  pixel_art_camera.rs  pixel_art_rendering.rs
wasm/template/: index.html
web_build_template/: index.html
