[package]
name = "avoid_your_past_rust_bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
# See: https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
# See: https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.9.1"
