[package]
name = "avoid_your_past_rust_bevy"
version = "0.1.0"
authors = ["Beetroot Paul <paul@beetrootpaul.com>"]
repository = "https://github.com/beetrootpaul/avoid-your-past--rust-bevy/"
edition = "2021"
#TODO: license field https://doc.rust-lang.org/cargo/reference/manifest.html#the-license-and-license-file-fields

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# # # # # # # #
# workspaces
#

# Resolver set to 2 is required if you are using Cargo Workspaces
# See: https://bevyengine.org/learn/book/getting-started/setup/#cargo-workspaces
#[workspace]
#resolver = "2" # Important! wgpu/Bevy needs this!

# # # # # # # # #
# optimization
#

# Enable a small amount of optimization in debug_helpers mode
# See: https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations
# See: https://bevy-cheatbook.github.io/pitfalls/performance.html#unoptimized-debug-builds
#[profile.dev]
#opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
# See: https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations
# See: https://bevy-cheatbook.github.io/pitfalls/performance.html#unoptimized-debug-builds
[profile.dev.package."*"]
opt-level = 3

# See: https://bevy-cheatbook.github.io/platforms/wasm/size-opt.html#compiling-for-size-instead-of-speed
[profile.release]
opt-level = 's'
#opt-level = 'z'

# TODO: web: optimize for binary size https://doc.rust-lang.org/cargo/reference/profiles.html#opt-level

# TODO: zdefiniuj brak incremental i inne rzeczy dla profilu release https://doc.rust-lang.org/cargo/reference/profiles.html#release

# # # # # # # # #
# dependencies
#

[dependencies]
bevy_pixel_camera = "0.3.0"
bevy_prototype_debug_lines = "0.9.0"
iyes_loopless = "0.9.1"
rand = "0.8.5"

[dependencies.bevy]
version = "0.9.1"
# Features config based on https://bevy-cheatbook.github.io/setup/bevy-config.html#bevy-cargo-features
default-features = false
features = [
    # These are the default features:
    # (re-enable whichever you like)

    # Bevy functionality:
    "bevy_asset", # Assets management
    # "bevy_scene",         # Scenes management
    "bevy_gilrs", # Gamepad input support
    # "bevy_audio",         # Builtin audio | WARNING: Do not enable it, because we use bevy_kira_audio instead
    "bevy_winit", # Window management
    # "animation",          # Animation support
    # "x11",                # Linux: Support X11 windowing system
    "filesystem_watcher", # Asset hot-reloading
    # "render",             # Graphics Rendering

    ## "render" actually just includes:
    ## (feel free to use just a subset of these, instead of "render")
    "bevy_render", # Rendering framework core
    "bevy_core_pipeline", # Common rendering abstractions
    "bevy_sprite", # 2D (sprites) rendering
    #    "bevy_pbr",           # 3D (physically-based) rendering
    #    "bevy_gltf",          # GLTF 3D assets format support
    #    "bevy_text",          # Text/font rendering
    #    "bevy_ui",            # UI toolkit

    # File formats:
    "png",
    # "hdr",
    # "vorbis", # WARNING: Do not enable it, because we use bevy_kira_audio instead

    # These are other features that may be of interest:
    # (add any of these that you need)

    # Bevy functionality:
    #    "wayland",              # Linux: Support Wayland windowing system
    #    "subpixel_glyph_atlas", # Subpixel antialiasing for text/fonts
    #    "serialize",            # Support for `serde` Serialize/Deserialize
    #    "bevy_dynamic_plugin"   # Support for loading of `DynamicPlugin`s

    # File formats:
    #    "ktx2", # preferred format for GPU textures
    #    "dds",
    #    "jpeg",
    #    "bmp",
    #    "tga",
    #    "basis-universal",
    #    "zstd", # needed if using zstd in KTX2 files
    #    "flac", # WARNING: Do not enable it, because we use bevy_kira_audio instead
    #    "mp3",  # WARNING: Do not enable it, because we use bevy_kira_audio instead
    #    "wav",  # WARNING: Do not enable it, because we use bevy_kira_audio instead
    # Development/Debug features:
    #    "dynamic",      # Dynamic linking for faster compile-times
    #    "trace",        # Enable tracing for performance measurement
    #    "trace_tracy",  # Tracing using `tracy`
    #    "trace_chrome", # Tracing using the Chrome format
    #    "wgpu_trace",   # WGPU/rendering tracing
]

[dependencies.bevy_kira_audio]
version = "0.13.0"
default-features = false
features = [
    # TODO: would OGG be better for web in terms of compatibility?
    #    "wav",
    #    "flac",
    #    "mp3",
    "ogg",
]